# verifit-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/database/: exercises.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  tasks.rs  users.rs  workout_sets.rs
src/routes/: create_exercise.rs  create_task.rs  create_user.rs  create_workout_set.rs  delete_exercise.rs  delete_set.rs  get_exercises.rs  get_one_exercise.rs  get_one_task.rs  get_workout_sets.rs  guard.rs  hello_world.rs  mod.rs  request_logger.rs  update_exercises.rs  update_sets.rs  users.rs
src/utils/: jwt.rs  mod.rs
