[package]
name = "verifit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.26.0", features = ["full"] }
axum = { version = "0.6.10", features = ["headers"] }
serde = { version = "1.0.152", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["cors"] }
bcrypt = "0.14.0"
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
regex = "1.7.1"
